--- a/changes.txt
+++ b/changes.txt
@@ -10,3 +10,15 @@ Color of the title (outline)
 Color of the text
 Spacing
 Grey box around photos
+
+IMPROVEMENTS:
+Timer
+Tally marks for how many times they get it right
+Handle repeating images
+Handle name variations (upper/lowercase)
+Handle nicknames (EL v. Eleven)
+Handle errors (specifically with a "change" listener)
+Sound when you get the right answer (or theme song)
+Auto-erase
+Animation when something appears
+Hints
