--- a/changes.txt
+++ b/changes.txt
@@ -1,24 +1,12 @@
-PARTNER A
 Background color
-Font style
 Center the title
-Image size
-
-PARTNER B
-Font size of title
-Color of the title (outline)
-Color of the text
-Spacing
-Grey box around photos
-
-IMPROVEMENTS:
-Timer
-Tally marks for how many times they get it right
-Handle repeating images
-Handle name variations (upper/lowercase)
-Handle nicknames (EL v. Eleven, and Toothless v. Dustin)
-Handle errors (specifically with a "change" listener)
-Sound when you get the right answer (or theme song)
-Auto-erase
-Animation when something appears
-Hints
+Horizontal line (different style of input)
+Font looks different
+Text at the bottom needs to get larger and needs to be centered.
+Color of text at the bottom
+There's a container for the picture
+Grey background
+Title color
+Picture is smaller
+There's space between elements
+- 
